tests/TypeValidationTests/data/UnaryOpTypeTest.stderr.expect
./data/UnaryOpTypeTest.xpl:14:9: error: invalid operand of type `node[]' to unary operator -
./data/UnaryOpTypeTest.xpl:15:9: error: invalid operand of type `node[]' to unary operator +
./data/UnaryOpTypeTest.xpl:16:9: error: invalid operand of type `node[]' to unary operator ++
./data/UnaryOpTypeTest.xpl:17:9: error: invalid operand of type `node[]' to unary operator --
./data/UnaryOpTypeTest.xpl:18:9: error: invalid operand of type `node[]' to unary operator ~
./data/UnaryOpTypeTest.xpl:28:9: error: invalid operand of type `real' to unary operator ++
./data/UnaryOpTypeTest.xpl:29:9: error: invalid operand of type `real' to unary operator --
./data/UnaryOpTypeTest.xpl:30:9: error: invalid operand of type `real' to unary operator ~
./data/UnaryOpTypeTest.xpl:32:9: error: invalid operand of type `boolean' to unary operator -
./data/UnaryOpTypeTest.xpl:33:9: error: invalid operand of type `boolean' to unary operator +
./data/UnaryOpTypeTest.xpl:34:9: error: invalid operand of type `boolean' to unary operator ++
./data/UnaryOpTypeTest.xpl:35:9: error: invalid operand of type `boolean' to unary operator --
./data/UnaryOpTypeTest.xpl:38:9: error: invalid operand of type `string' to unary operator -
./data/UnaryOpTypeTest.xpl:39:9: error: invalid operand of type `string' to unary operator +
./data/UnaryOpTypeTest.xpl:40:9: error: invalid operand of type `string' to unary operator ++
./data/UnaryOpTypeTest.xpl:41:9: error: invalid operand of type `string' to unary operator --
./data/UnaryOpTypeTest.xpl:42:9: error: invalid operand of type `string' to unary operator ~
./data/UnaryOpTypeTest.xpl:44:9: error: invalid operand of type `document' to unary operator -
./data/UnaryOpTypeTest.xpl:45:9: error: invalid operand of type `document' to unary operator +
./data/UnaryOpTypeTest.xpl:46:9: error: invalid operand of type `document' to unary operator ++
./data/UnaryOpTypeTest.xpl:47:9: error: invalid operand of type `document' to unary operator --
./data/UnaryOpTypeTest.xpl:48:9: error: invalid operand of type `document' to unary operator ~
./data/UnaryOpTypeTest.xpl:50:9: error: invalid operand of type `element' to unary operator -
./data/UnaryOpTypeTest.xpl:51:9: error: invalid operand of type `element' to unary operator +
./data/UnaryOpTypeTest.xpl:52:9: error: invalid operand of type `element' to unary operator ++
./data/UnaryOpTypeTest.xpl:53:9: error: invalid operand of type `element' to unary operator --
./data/UnaryOpTypeTest.xpl:54:9: error: invalid operand of type `element' to unary operator ~
./data/UnaryOpTypeTest.xpl:56:9: error: invalid operand of type `attribute' to unary operator -
./data/UnaryOpTypeTest.xpl:57:9: error: invalid operand of type `attribute' to unary operator +
./data/UnaryOpTypeTest.xpl:58:9: error: invalid operand of type `attribute' to unary operator ++
./data/UnaryOpTypeTest.xpl:59:9: error: invalid operand of type `attribute' to unary operator --
./data/UnaryOpTypeTest.xpl:60:9: error: invalid operand of type `attribute' to unary operator ~
./data/UnaryOpTypeTest.xpl:62:9: error: invalid operand of type `comment' to unary operator -
./data/UnaryOpTypeTest.xpl:63:9: error: invalid operand of type `comment' to unary operator +
./data/UnaryOpTypeTest.xpl:64:9: error: invalid operand of type `comment' to unary operator ++
./data/UnaryOpTypeTest.xpl:65:9: error: invalid operand of type `comment' to unary operator --
./data/UnaryOpTypeTest.xpl:66:9: error: invalid operand of type `comment' to unary operator ~
./data/UnaryOpTypeTest.xpl:68:9: error: invalid operand of type `pi' to unary operator -
./data/UnaryOpTypeTest.xpl:69:9: error: invalid operand of type `pi' to unary operator +
./data/UnaryOpTypeTest.xpl:70:9: error: invalid operand of type `pi' to unary operator ++
./data/UnaryOpTypeTest.xpl:71:9: error: invalid operand of type `pi' to unary operator --
./data/UnaryOpTypeTest.xpl:72:9: error: invalid operand of type `pi' to unary operator ~
./data/UnaryOpTypeTest.xpl:error: input contains errors
