tests/TypeValidationTests/data/UnaryOpTypeTest.xpl
node[] main() {
	node[] Seq;
	integer Int;
	real Real;
	boolean Bool;
	string Str;
	document Doc;
	element Elem;
	attribute Attr;
	comment Comm;
	pi Pi;

	!Seq;
	-Seq;
	+Seq;
	++Seq;
	--Seq;
	~Seq;
	!Int;
	-Int;
	+Int;
	++Int;
	--Int;
	~Int;
	!Real;
	-Real;
	+Real;
	++Real;
	--Real;
	~Real;
	!Bool;
	-Bool;
	+Bool;
	++Bool;
	--Bool;
	~Bool;
	!Str;
	-Str;
	+Str;
	++Str;
	--Str;
	~Str;
	!Doc;
	-Doc;
	+Doc;
	++Doc;
	--Doc;
	~Doc;
	!Elem;
	-Elem;
	+Elem;
	++Elem;
	--Elem;
	~Elem;
	!Attr;
	-Attr;
	+Attr;
	++Attr;
	--Attr;
	~Attr;
	!Comm;
	-Comm;
	+Comm;
	++Comm;
	--Comm;
	~Comm;
	!Pi;
	-Pi;
	+Pi;
	++Pi;
	--Pi;
	~Pi;
}

